# BoggersTheAI

./: .coveragerc  .env.example  .gitignore  ARCHITECTURE.md  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  FRONTIER_PLAN.md  README.md  __init__.py  __main__.py  benchmark_report.md  config.yaml  demo_tension_vs_softmax.py  docker-compose.yml  graph.db-shm  pyproject.toml
.github/workflows/: test.yml
adapters/: __init__.py  arxiv.py  base.py  hacker_news.py  markdown.py  rss.py  semantic_scholar.py  vault.py  wikipedia.py  x_api.py
core/: __init__.py  config_loader.py  config_schema.py  context_mind.py  contradiction.py  embeddings.py  fine_tuner.py  graph.py  local_llm.py  mode_manager.py  plugins.py  query_processor.py  router.py  synthesis_protocols.py  temperament.py  trace_processor.py  ts_engine.py  types.py  wave.py
core-vm/: __init__.py  artifact_log.py
core-vm/bogvm/: __main__.py  archive.py  assembler.py  bases.py  bog_runtime.py  bogboot.py  bogcell.py  bogfs.py  bogos.py  container.py  genesis.py  hypergenesis.py  instruction.py  kernel.py  mesh.py  opcodes.py  optimizer.py  packer.py  schema.py  signing.py  store.py  swarm.py  transforms.py  vertical.py  vm.py
core/graph/: __init__.py  edge.py  graph_only_synthesizer.py  node.py  receipts.py  rules_engine.py  snapshots.py  source_stability.py  sqlite_backend.py  universal_living_graph.py  wave.py  wave_propagation.py  wave_runner.py
core/intuition/: tension_generator.py
core/language/: __init__.py  tslc.py
core/reasoning/: ts_unified_adapter.py
core/verifier/: __init__.py  verifier_os.py
dashboard/: app.py
docs/: MANIFESTO.md  METRICS_TODO.md  README.md  anti-token-prediction.md  bogpk-pipeline.md  directory-structure.md  truth-graph.md
entities/: __init__.py  consolidation.py  inference_router.py  insight.py  meta_critique.py
examples/: README.md  graph_evolution_demo.py
experiments/frontier/: COGNITIVE_PHYSICS_ROADMAP.md  PHASE0_DETAIL_PLAN.md  PHASE1_PLAN.md  PHASE2_PLAN.md  SERIOUS_GPT55_ROADMAP.md  WAVE0_SPRINT_PLAN.md  WORKSPACE_CLEANUP_PLAN.md  bogvm_graph_bridge.py  full_ts_gpt55_demo.py  generate_self_data.py  gpt55_progress_demo.py  hard_tasks.json  hello_frontier.py  language_compiler.py  master_ts_system_demo.py  perf_baseline.py  phase0_unification_spike.py  phase1_scale_demo.py  phase2_start_demo.py  scale_probe.py  (+7 more)
inference/: __init__.py  artifact_export.py
interface/: __init__.py  api.py  autonomous_loop.py  chat.py  runtime.py  self_improvement.py
mind/: tui.py
multimodal/: __init__.py  base.py  clip_embed.py  image_in.py  voice_in.py  voice_out.py  whisper.py
reasoner/: __init__.py  artifact_receipts.py  wave_bridge.py
scripts/: run_benchmarks.py  seed_graph.py
shared/: __init__.py
tests/: conftest.py  test_adapters_detailed.py  test_bogpk_pipeline.py  test_config_schema.py  test_consolidation.py  test_dashboard_endpoints.py  test_events_metrics.py  test_fine_tuner.py  test_graph_detailed.py  test_graph_native_synthesis.py  test_graph_utils.py  test_http.py  test_insight.py  test_phase2.py  test_phase3.py  test_router.py  test_synthesis.py  test_tools.py  test_trace_processor.py  test_wave.py  test_wave_bridge.py  test_wave_detailed.py  test_wave_runner.py  test_waves_jsonl_fold.py
tools/: __init__.py  base.py  calc.py  code_run.py  executor.py  file_read.py  router.py  search.py
(+152 files in other folders)
