[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "BoggersTheAI"
version = "0.1.0"
description = "Modular TS-OS architecture with graph-wave reasoning pipeline."
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "BoggersTheAI Contributors" }]
dependencies = []

[tool.setuptools]
include-package-data = true
