[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "BoggersTheAI"
version = "0.3.0"
description = "Modular TS-OS architecture with graph-wave reasoning pipeline."
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [{ name = "BoggersTheAI Contributors" }]
keywords = ["ts-os", "graph", "reasoning", "autonomy", "ollama"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
  "pyyaml",
]

[project.optional-dependencies]
llm = [
  "ollama",
]
gpu = [
  "ollama",
  "unsloth[colab-new]>=2024.9",
  "torch>=2.4.0",
]
dev = [
  "pytest",
  "pytest-cov",
  "black",
  "isort",
  "ruff",
  "mypy",
  "fastapi",
  "uvicorn",
  "ollama",
]
all = [
  "ollama",
  "unsloth[colab-new]>=2024.9",
  "torch>=2.4.0",
  "rich",
  "fastapi",
  "uvicorn",
  "feedparser",
]

[project.scripts]
boggers = "BoggersTheAI.interface.chat:run_chat"
dashboard-start = "BoggersTheAI.dashboard.app:main"

[tool.setuptools]
include-package-data = true
packages = [
  "BoggersTheAI",
  "BoggersTheAI.adapters",
  "BoggersTheAI.core",
  "BoggersTheAI.core.graph",
  "BoggersTheAI.dashboard",
  "BoggersTheAI.entities",
  "BoggersTheAI.interface",
  "BoggersTheAI.mind",
  "BoggersTheAI.multimodal",
  "BoggersTheAI.tools",
]

[tool.setuptools.package-dir]
BoggersTheAI = "."

[tool.isort]
profile = "black"

[tool.black]
line-length = 88
